--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation files(dir: 'libs', include: ['*.aar'])
+    //implementation files(dir: 'libs', include: ['*.aar'])
+    implementation files('../libs/spotify-app-remote-release-0.7.2.aar')
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation 'com.spotify.android.auth:1.1.0'
+    //implementation 'com.spotify.android.auth:1.1.0'
 }
