--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation files('../libs/spotify-app-remote-release-0.7.2.aar')
     implementation "com.google.code.gson:gson:2.8.5"
     //implementation 'com.spotify.android.auth:1.1.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
